--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "mbition challenge",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "lint": "eslint 'src/*.js'"
   },
   "author": "Losmino13",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "eslint": "^8.34.0"
   }
 }
