--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Losmino13",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2",
-    "eslint": "^8.34.0"
+    "express": "4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.51.0"
   }
 }
