--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mbition challenge",
   "main": "app.js",
   "scripts": {
-    "test": "test",
+    "test": "npm test",
     "lint": "eslint 'src/*.js'"
   },
   "author": "Losmino13",
