--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mbition challenge",
   "main": "app.js",
   "scripts": {
-    "test": "test",
+    "test": "mocha test/*.test.js",
     "lint": "eslint 'src/*.js'"
   },
   "author": "Losmino13",
@@ -13,6 +13,9 @@
     "express": "4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.51.0"
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "eslint": "^8.51.0",
+    "mocha": "^10.2.0"
   }
 }
