--- a/.github/workflows/pr-test.yaml
+++ b/.github/workflows/pr-test.yaml
@@ -30,4 +30,4 @@ jobs:
         run: npx better-npm-audit audit
 
       - name: Run unit tests
-        run: npm test || true
+        run: CI=true npm test
