--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,26 +65,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build, tag, and push image to DockerHub
+        id: build-image
+        env:
+          IMAGE_TAG: v${{ needs.version_bump.outputs.outputver }}
+        run: |
+          # Build a docker container and push it to dockerhub
+          docker build -t $DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG .
+          docker tag $DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG $DOCKER_REPOSITORY/$SERVICE:latest
+          docker push $DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG
+          docker push $DOCKER_REPOSITORY/$SERVICE:latest
+          echo "image=$DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+  generate_csv:
+    name: Generate CSV file and archive it
+    runs-on: ubuntu-latest
+    steps:
+      - name: run jq script
+        run: ./scripts/make_csv.sh
+      - name: Upload csv results to arifacts
+      uses: actions/upload-artifact@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build, tag, and push image to DockerHub
-      id: build-image
-      env:
-        IMAGE_TAG: v${{ needs.version_bump.outputs.outputver }}
-      run: |
-        # Build a docker container and push it to dockerhub
-        docker build -t $DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG .
-        docker tag $DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG $DOCKER_REPOSITORY/$SERVICE:latest
-        docker push $DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG
-        docker push $DOCKER_REPOSITORY/$SERVICE:latest
-        echo "image=$DOCKER_REPOSITORY/$SERVICE:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        name: DevOps report csv
+        path: output_no_quotes.csv
+        retention-days: 7
 
   trigger_scan:
     needs: build_deploy
