--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,7 @@
 name: Deploy to App
 
 on:
+  workflow_run:
   pull_request:
     branches:
       - main
@@ -46,6 +47,10 @@ jobs:
       - name: Bump minor version
         if: startsWith(github.head_ref, 'feature/')
         run: npm version minor
+
+      - name: Bump minor version
+        if: startsWith(github.head_ref, 'main')
+        run: echo "direct push to main"
 
       - name: Bump patch version
         if: |
@@ -93,11 +98,11 @@ jobs:
       - name: run jq script
         run: ./scripts/make_csv.sh
       - name: Upload csv results to arifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: DevOps report csv
-        path: output_no_quotes.csv
-        retention-days: 7
+        uses: actions/upload-artifact@v3
+        with:
+          name: DevOps report csv
+          path: output_no_quotes.csv
+          retention-days: 7
 
   trigger_scan:
     needs: build_deploy
